force-app/main/default/objects/Checklist__c/Checklist__c.object-meta.xml
<CustomObject>
    <description>Represents an onboarding, KYC, or enablement checklist assigned to a client, partner, or employee.</description>
    <label>Checklist</label>
    <nameField>
        <displayFormat>CL-{00000000}</displayFormat>
        <label>Checklist Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Checklists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>