force-app/main/default/objects/Checklist__c/fields/Business_Address__c.field-meta.xml
<CustomField>
    <fullName>Business_Address__c</fullName>
    <label>Business Address</label>
    <type>TextArea</type>
    <description>Business address, auto-populated from analyzed documents.</description>
</CustomField>