force-app/main/default/objects/Checklist__c/fields/Checklist_Type__c.field-meta.xml
<CustomField>
    <fullName>Checklist_Type__c</fullName>
    <label>Checklist Type</label>
    <type>Picklist</type>
    <required>true</required>
    <description>The category of checklist.</description>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Onboarding</fullName><default>true</default><label>Onboarding</label></value>
            <value><fullName>KYC</fullName><default>false</default><label>KYC</label></value>
            <value><fullName>Enablement</fullName><default>false</default><label>Enablement</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>