force-app/main/default/objects/Checklist__c/fields/Client_Segment__c.field-meta.xml
<CustomField>
    <fullName>Client_Segment__c</fullName>
    <label>Client Segment</label>
    <type>Picklist</type>
    <description>The market segment of the client (Client record type only).</description>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>B2B</fullName><default>false</default><label>B2B</label></value>
            <value><fullName>B2C</fullName><default>false</default><label>B2C</label></value>
            <value><fullName>Public</fullName><default>false</default><label>Public</label></value>
            <value><fullName>Private</fullName><default>false</default><label>Private</label></value>
            <value><fullName>Partner</fullName><default>false</default><label>Partner</label></value>
            <value><fullName>Real Estate Investment</fullName><default>false</default><label>Real Estate Investment</label></value>
            <value><fullName>Cannabis</fullName><default>false</default><label>Cannabis</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>