force-app/main/default/objects/Checklist__c/fields/Dashboard_Config_Name__c.field-meta.xml
<CustomField>
    <fullName>Dashboard_Config_Name__c</fullName>
    <label>Dashboard Config Name</label>
    <type>Text</type>
    <length>80</length>
    <description>Which Dashboard_Config__c branding profile to apply (e.g., Citi, Citizens, ICE).</description>
</CustomField>