force-app/main/default/objects/Checklist__c/fields/Date_of_Incorporation__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Incorporation__c</fullName>
    <label>Date of Incorporation</label>
    <type>Date</type>
    <description>Date of incorporation, auto-populated from analyzed documents.</description>
</CustomField>