force-app/main/default/objects/Checklist__c/fields/DBA_Name__c.field-meta.xml
<CustomField>
    <fullName>DBA_Name__c</fullName>
    <label>DBA Name</label>
    <type>Text</type>
    <length>255</length>
    <description>Doing-Business-As name, auto-populated from analyzed documents.</description>
</CustomField>