force-app/main/default/objects/Checklist__c/fields/Employee_User__c.field-meta.xml
<CustomField>
    <fullName>Employee_User__c</fullName>
    <label>Employee</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Onboarding Checklists</relationshipLabel>
    <relationshipName>Onboarding_Checklists</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>For Employee record type — the employee completing onboarding.</description>
</CustomField>