force-app/main/default/objects/Checklist__c/fields/Items_Complete__c.field-meta.xml
<CustomField>
    <fullName>Items_Complete__c</fullName>
    <label>Items Complete</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
    <description>Count of completed checklist items (maintained by automation).</description>
</CustomField>