force-app/main/default/objects/Checklist__c/fields/Items_Total__c.field-meta.xml
<CustomField>
    <fullName>Items_Total__c</fullName>
    <label>Items Total</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
    <description>Total count of checklist items (maintained by automation).</description>
</CustomField>