force-app/main/default/objects/Checklist__c/fields/Legal_Entity_Name__c.field-meta.xml
<CustomField>
    <fullName>Legal_Entity_Name__c</fullName>
    <label>Legal Entity Name</label>
    <type>Text</type>
    <length>255</length>
    <description>Registered legal entity name, auto-populated from analyzed documents.</description>
</CustomField>