force-app/main/default/objects/Checklist__c/fields/Manager_User__c.field-meta.xml
<CustomField>
    <fullName>Manager_User__c</fullName>
    <label>Manager (Escalation)</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Managed Checklists</relationshipLabel>
    <relationshipName>Managed_Checklists</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The manager notified on the third reminder escalation.</description>
</CustomField>