force-app/main/default/objects/Checklist__c/fields/Onboarding_Specialist__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Specialist__c</fullName>
    <label>Onboarding Specialist</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Specialist Checklists</relationshipLabel>
    <relationshipName>Specialist_Checklists</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The ops onboarding specialist assigned to this checklist.</description>
</CustomField>