force-app/main/default/objects/Checklist__c/fields/Preferred_Communication__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Communication__c</fullName>
    <label>Preferred Communication Method</label>
    <type>Picklist</type>
    <description>How this client or employee prefers to receive reminders and updates.</description>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Email</fullName><default>true</default><label>Email</label></value>
            <value><fullName>SMS</fullName><default>false</default><label>SMS</label></value>
            <value><fullName>Slack</fullName><default>false</default><label>Slack</label></value>
            <value><fullName>Experience Cloud</fullName><default>false</default><label>Experience Cloud</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>