force-app/main/default/objects/Checklist__c/fields/Progress_Percent__c.field-meta.xml
<CustomField>
    <fullName>Progress_Percent__c</fullName>
    <label>Progress %</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>1</scale>
    <description>Overall completion percentage, rolled up from checklist items.</description>
</CustomField>