force-app/main/default/objects/Checklist__c/fields/Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep__c</fullName>
    <label>Sales Rep</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Sales Checklists</relationshipLabel>
    <relationshipName>Sales_Checklists</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The sales representative tied to this onboarding.</description>
</CustomField>