force-app/main/default/objects/Checklist__c/fields/Target_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Target_Completion_Date__c</fullName>
    <label>Target Completion Date</label>
    <type>Date</type>
    <description>Target date for the entire checklist to be completed.</description>
</CustomField>