force-app/main/default/objects/Checklist__c/fields/Tax_ID__c.field-meta.xml
<CustomField>
    <fullName>Tax_ID__c</fullName>
    <label>Tax ID / EIN</label>
    <type>Text</type>
    <length>20</length>
    <description>Tax identification number, auto-populated from analyzed documents.</description>
</CustomField>