force-app/main/default/objects/Checklist__c/recordTypes/Client.recordType-meta.xml
<RecordType>
    <fullName>Client</fullName>
    <active>true</active>
    <label>Client</label>
    <description>Checklist for client and partner onboarding, KYC, and enablement.</description>
</RecordType>