force-app/main/default/objects/Checklist__c/recordTypes/Employee.recordType-meta.xml
<RecordType>
    <fullName>Employee</fullName>
    <active>true</active>
    <label>Employee</label>
    <description>Checklist for employee onboarding and enablement, aligned to HR Service data model.</description>
</RecordType>